1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (COPYSTRING, CLEANUPSTRINGS): New macros.

1999-04-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* JavaProxy.[hm] ([JavaProxy -forward::]): Moved to Object_s.

	* directory.m (java_directory_java_find): Handle string conversion
	(resyncing Objective C entry with call to GetStringUTFChars each
	request).
	(java_ensure_selector): Handle void.
	(java_directory_objc_find_java): Return NULL if
	java_directory_objc_find fails.
	(java_directory_objc_find): Don't abort if item is not found.

1999-04-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* JavaProxy.m: Include directory.h.
	([JavaProxy -forward::]): Lookup Java method for call
	to setJavaMethod:.

	* directory.m: Use jniEnv, not jenv throughout.
	(java_ensure_selector): Call java_directory_update to relate
	Java and Objective selectors.

	* directory.h: Declare jniEnv.

1999-04-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* JavaProxy.m ([JavaProxy -forward::]): Use types_t instead of
	local union.  Use getRetVal:buf: into a local types_t instead of
	munging argFrame here.  This is to allow for dropping the 
	FCall and FArguments instances before leaving.

1999-04-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h, SwarmEnvironment.m: Include misc.h first to avoid
	jmalloc/stdlib conflict.

1999-03-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.m: Use import for Objective C things.

	* Makefile.in (JAVAINCLUDES): Use substitution.

1999-03-31  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.h (java_directory_init): Remove globalZone, 
	uniformIntRand and uniformDblRand from the list of arguments.

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): 
	Pass just SwarmEnvironment instance to java_directory_init.

	* directory.m (java_directory_init): Instead of getting globalZone, 
	uniformIntRand and uniformDblRand as arguments extract them from